Spacing in subscribe section fixed

--- a/themes/evr/sass/_front-page.scss
+++ b/themes/evr/sass/_front-page.scss
@@ -230,6 +230,12 @@
         .subscribe-content {
             text-align: center;
         }
+        h2 {
+            margin: 0;
+        }
+        p {
+            margin-top: 0;
+        }
         .subscribe-form {
             display: flex;
             max-width: 300px;
